@@ -2601,9 +2601,9 @@ sub scan_texinfo_file
       # Try to find what are the indexes which are used.
 
       # Creating a new category of index.
-      elsif (/^\@defcodeindex (\w+)/)
+      elsif (/^\@def(code)?index (\w+)/)
       {
-        push @clean_suffixes, $1;
+        push @clean_suffixes, $2;
       }
 
       # Storing in a predefined index.
@@ -2618,9 +2618,9 @@ sub scan_texinfo_file
       }
 
       # Merging an index into an another.
-      elsif (/^\@syncodeindex (\w+) \w+/)
+      elsif (/^\@syn(code)?index (\w+) \w+/)
       {
-	push @syncodeindexes, "$1s";
+	push @syncodeindexes, "$2s";
       }
 
     }
