@@ -1,3 +1,8 @@
+2001-05-05  Pavel Roskin <proski@gnu.org>
+
+	* automake.in (scan_texinfo_file): Treat @defindex and @synindex
+	in the same way as @defcodeindex and @syncodeindex respectively.
+
 2001-05-05  Tom Tromey  <tromey@redhat.com>
 
 	* mans.am (install-man%SECTION%): Minor cleanup.
